Add missing Apache license header